CSS updation on current items

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </ul>
     </nav>
     <h1 id="main">WELCOME TO BATFAM</h1>
-    <div><button id="btn-signin">Enter the Batworld</button></div>
+    <div id="btn1"><button id="btn-signin">Enter the Batworld</button></div>
 
 </body>
 </html>
