Changes to be committed: 	modified:   index.html 	new file:   signup.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>BatFam: A community for batsy</title>
 </head>
 <body>
-    <nav>
+    <nav id="nav">
         <ul>
             <li><a href="index.html" >Home</a></li>
             <li><a href="about.html" >About</a></li>
@@ -16,7 +16,7 @@
         </ul>
     </nav>
     <h1 id="main">WELCOME TO BATFAM</h1>
-    <div id="btn1"><button id="btn-signin">Enter the Batworld</button></div>
+    <div id="btn1"><button id="btn-signin"><a href="signup.html">Enter the Batworld</a></button></div>
 
 </body>
 </html>
